--- a/index.html
+++ b/index.html
@@ -125,6 +125,20 @@
     <br>
     <button type="submit" class="submit-button">Submit</button>
 
-  </form>
+  </<form
+  action="https://formspree.io/f/xldnbvdv"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>>
 </body>
 </html>
