--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   <h1>Reading Museum Visitor Questionnaire</h1>
   <p>Thank you for taking the time to complete this questionnaire. Your responses will help us improve the visitor experience at Reading Museum.</p>
 
-  <form>
+  <form action="https://formspree.io/f/xldnbvdv" method="POST">
+    <input type="hidden" name="_replyto" value="">
 
     <label>1. Have you visited Reading Museum before?</label>
     <div class="radio-group">
@@ -125,20 +126,7 @@
     <br>
     <button type="submit" class="submit-button">Submit</button>
 
-  </<form
-  action="https://formspree.io/f/xldnbvdv"
-  method="POST"
->
-  <label>
-    Your email:
-    <input type="email" name="email">
-  </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
-  <!-- your other form fields go here -->
-  <button type="submit">Send</button>
-</form>>
+  </form>
 </body>
 </html>
+
